fixed cart number on mobile

--- a/styles/sass/_mediaQueries.scss
+++ b/styles/sass/_mediaQueries.scss
@@ -48,6 +48,13 @@
             padding:1% 0;
         }
     }
+
+        // fix cart numbers to allign\
+        .totalItemQuantity{
+            position:relative;
+            top:-17px;
+            left:20px;
+        }
 }
 
 
